--- a/Day02/css-lab01.html
+++ b/Day02/css-lab01.html
@@ -21,11 +21,48 @@
 		li:hover {
 			background-color: red;
 		}
+		.outer {
+			min-height: 50%;
+			min-width: 50%;
+			text-align:center;
+			margin-left: 20%;
+		}
+		.inner h5 {
+			font-size: 1.2em;
+			border-bottom:solid;
+			border-width:0.5px;
+			position:relative;
+			top:-15px;
+		}
+		.inner {
+			min-height: 20%;
+			min-width: 20%;
+			float:left;
+			margin:5%;
+			border:solid;
+			border-width: 0.3px;
+			border-radius: 1px;
+		}
+		header select{
+			float:right;
+		}
 		</style>
+		<script>
+		function changeFontSize(){
+			var font = document.getElementById("fontlist").value;
+			document.body.style.fontSize = font;
+		}
+		</script>
 	</head>
 	<body>
 		<header>
 			<span>Welcome Sam!!!</span>
+			<select id="fontlist" onchange="changeFontSize();">
+				<option>--SELECT--</option>
+				<option>12px</option>
+				<option>16px</option>
+				<option>18px</option>
+			</select>	
 		</header>
 		<nav>
 			<ul>
@@ -34,6 +71,22 @@
 				<li>Account</li>
 			</ul>	
 		</nav>
-		<hr/>	
+		<hr/>
+		<div class="outer">
+			<div class="inner">
+				<h5>TamilNadu</h5>
+			</div>
+			<div class="inner">
+				<h5>WB</h5>
+			</div>
+		</div>		
+		<div class="outer">
+			<div class="inner">
+				<h5>Kerala</h5>
+			</div>
+			<div class="inner">
+				<h5>Assam</h5>
+			</div>
+		</div>		
 	</body>		
 </html>
