--- a/Day03/css-pseudo.html
+++ b/Day03/css-pseudo.html
@@ -16,6 +16,11 @@
 			li:nth-child(even):hover {
 				font-size: 30px;
 			}
+			/*li{
+				-webkit-transition-duration:5s;
+				-webkit-transition-delay:2s;
+				-webkit-transform : translate(150px,150px) rotateY(180deg) scale(1.5) skew(30deg,30deg) ;
+			}*/
 			
 			li:nth-child(odd){
 				background-color: green;
