--- a/Day04/jquery_dom.html
+++ b/Day04/jquery_dom.html
@@ -2,7 +2,9 @@
 	<head>
 		<script src="jquery-2.2.4.min.js"></script>
 		<script>
-		$().ready(function(){
+		$(
+			
+		).ready(function(){
 			$('button').on("click",modifyDiv);
 		});
 		function modifyDiv(){
