--- a/Day06/Lab01.html
+++ b/Day06/Lab01.html
@@ -38,16 +38,26 @@
 			$('#password').attr("type","password");
 		}
 		</script>
+		<style>
+		.qn {
+			color: white;
+			float: right;
+			position:relative;
+			right: -20px;
+			top: -22px;
+		}
+		</style>
 	</head>
 	<body style="background-color:black">
 		<div class="container">
 	        
 			 <div class="row" style="margin:1%">
 				 <div class="form-group col-xs-12">
-					 <input type="text" class="form-control" placeholder="User name" id="username">
+					 <input type="text" class="form-control" placeholder="User name" id="username"><i class="glyphicon glyphicon-question-sign qn" data-toggle="tooltip" data-placement="left" title="blah blah blah blah"></i>
 				 </div>
 				 <div class="form-group col-xs-12">
 					 <input type="password" class="form-control" placeholder="Password" id="password"><i id="passwordopenicon" class="glyphicon glyphicon-eye-open" style="float:right;margin:-27px 10px 0 0;"></i>
+					 <i class="glyphicon glyphicon-question-sign qn" data-toggle="tooltip" data-placement="left" title="blah blah blah blah"></i>
 				 </div>
 				 <div class="form-group col-xs-12">
 					<button type="button" id="loginbutton" class="btn btn-primary" style="width:100%">Submit</button>	 
