--- a/Day06/Lab01.html
+++ b/Day06/Lab01.html
@@ -50,7 +50,29 @@
 	</head>
 	<body style="background-color:black">
 		<div class="container">
-	        
+			
+         <nav class="navbar navbar-default">
+           <div class="container">
+             <div class="navbar-header">
+               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#accenture">
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+               </button>
+			   <a href="#">Accenture LOGO</a>
+             </div>
+             <div id="accenture" class="navbar-collapse collapse">
+               <ul class="nav navbar-nav">
+                 <li class="active"><a href="#">About Us</a></li>
+                 <li><a href="#">Locations</a></li>
+                 <li><a href="#">Contact us</a></li>
+               </ul>
+             </div>
+           </div>
+         </nav>
+			
+			
+			
 			 <div class="row" style="margin:1%">
 				 <div class="form-group col-xs-12">
 					 <input type="text" class="form-control" placeholder="User name" id="username"><i class="glyphicon glyphicon-question-sign qn" data-toggle="tooltip" data-placement="left" title="blah blah blah blah"></i>
